@@ -387,24 +387,12 @@ of Search Results</td>
 </tr>
 <tr>
 <td><a name="desc_search_show_limit"></a>Show
-Page Limits</td>
-<td>Whether or not to display the 'Number of Items Per
-Page' dropdown on the search results.</td>
-</tr>
-<tr>
-<td><a name="desc_search_show_sort"></a>Allow
-User to Sort Results</td>
-<td>Allow the user to sort the search results.</td>
-</tr>
-<tr>
-<td><a name="desc_search_show_num"></a>Show
 Result Number</td>
-<td>Show the total number of results found.</td>
+<td>Whether or not to display the number of each search result.</td>
 </tr>
 <tr>
-<td><a name="desc_search_show_type"></a>Show
-Result Type</td>
-<td>Show the result type (i.e.; Forum, Wiki, Story, etc.)</td>
+<td><a name="desc_search_show_sort"></a>Show Result Type</td>
+<td>Show the result type (i.e. Forum, Wiki, Story, etc.)</td>
 </tr>
 <tr>
 <td><a name="desc_search_show_user"></a>Show
@@ -418,9 +406,8 @@ Number of Hits</td>
 </tr>
 <tr>
 <td><a name="desc_search_no_data"></a>If
-No Data is Available, Display....</td>
-<td>If no data is available (description for example),
-display this text.</td>
+No Data is Available, Display</td>
+<td>If no data description is available, display this text.</td>
 </tr>
 <tr>
 <td><a name="desc_search_separator"></a>Group
@@ -436,11 +423,6 @@ Search Method</td>
 &nbsp;- any of the words<br />
 &nbsp;- exact phrase<br />
 </td>
-</tr>
-<tr>
-<td><a name="desc_default_search_order"></a>Default
-Sort Order</td>
-<td>Default Sort Order for search results.</td>
 </tr>
 </tbody>
 </table>
