@@ -2,6 +2,8 @@ glFusion ChangeLog
 
 v1.1.9
 ------
+- Improved bbcode cheat sheet based on nouveau theme (Eric)
+- Updated public_html/docs/config.html with new search info (Eric)
 - Added ability to create remote users (when enabled) (Mark)
 - FileMgmt: Add new configuration option 'Silent Edit Default' (Mark)
 - Move services dropdown after password on login forms (Mark)
